prod/automation/admin-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-dashboard-service-dpl
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-dashboard-service
  template:
    metadata:
      labels:
        app: admin-dashboard-service
    spec:
      containers:
      - name: admin-dashboard-service
        image: vicheak/efree-admin-dashboard:1.1.1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: admin-dashboard-service-svc
  namespace: microservice
spec:
  selector:
    app: admin-dashboard-service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
