prod/automation/category-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service-dpl
  namespace: microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: category-service
  template:
    metadata:
      labels:
        app: category-service
    spec:
      containers:
      - name: category-service
        image: vicheak/category-service:1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: category-service-svc
  namespace: microservice
spec:
  selector:
    app: category-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
