prod/automation/client-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app-service-dpl
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app-service
  template:
    metadata:
      labels:
        app: client-app-service
    spec:
      containers:
      - name: client-app-service
        image: vicheak/efree-client-app:1.0.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-app-service-svc
  namespace: microservice
spec:
  selector:
    app: client-app-service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
