prod/automation/configuration-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configuration-service-dpl
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration-service
  template:
    metadata:
      labels:
        app: configuration-service
    spec:
      containers:
      - name: configuration-service
        image: vicheak/configuration-service:1.0.1
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: configuration-service-svc
  namespace: microservice
spec:
  selector:
    app: configuration-service
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
  type: ClusterIP
