prod/automation/database-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: efree-dbserver-dpl
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: efree-dbserver
  template:
    metadata:
      labels:
        app: efree-dbserver
    spec:
      nodeSelector:
        task: db-host
      containers:
      - name: efree-dbserver
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data 
        - name: config-dbserver
          mountPath: /etc/postgresql/conf.d/postgresql.conf
          subPath: postgresql.conf
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: efree-dbserver-pvc
      - name: config-dbserver
        configMap:
          name: efree-dbserver-config
---
apiVersion: v1
kind: Service
metadata:
  name: efree-dbserver-svc
  namespace: microservice
spec:
  selector:
    app: efree-dbserver
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    nodePort: 30015
  type: NodePort
---
