prod/automation/eurekaservice-discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-service-dpl
  namespace: microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eureka-service
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      nodeSelector:
        task: db-host
      containers:
      - name: eureka-service
        image: vicheak/eureka-service:1.0.1
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service-svc
  namespace: microservice
spec:
  selector:
    app: eureka-service
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
    nodePort: 39000
  type: LoadBalancer
