prod/automation/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-dpl
  namespace: microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: vicheak/order-service:1.0.1
        ports:
        - containerPort: 8110
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
  namespace: microservice
spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 8110
    targetPort: 8110
  type: ClusterIP
