prod/automation/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-dpl
  namespace: microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: vicheak/payment-service:1.0.0
        ports:
        - containerPort: 8120
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-svc
  namespace: microservice
spec:
  selector:
    app: payment-service
  ports:
  - protocol: TCP
    port: 8120
    targetPort: 8120
  type: ClusterIP
