prod/automation/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-dpl
  namespace: microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: vicheak/product-service:1.0.3
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-svc
  namespace: microservice
spec:
  selector:
    app: product-service
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
  type: ClusterIP
