prod/automation/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-dpl
  namespace: microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: vicheak/user-service:1.0.1
        ports:
        - containerPort: 8100
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
  namespace: microservice
spec:
  selector:
    app: user-service
  ports:
  - protocol: TCP
    port: 8100
    targetPort: 8100
  type: ClusterIP
